# write-kit

./: README.md  pyproject.toml
memory/: themes.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-novel.sh  setup-outline.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-novel.ps1  setup-outline.ps1  setup-plan.ps1  update-agent-context.ps1
src/specify_cli/: __init__.py
templates/: character-template.md  manuscript-template.md  outline-template.md  premise-template.md  scene-template.md  scenes-template.md  world-building-template.md
templates/chapter-templates/: chapter-01-really-bad-day.md  chapter-02-something-peculiar.md  chapter-03-grasping-at-straws.md  chapter-04-call-to-adventure.md  chapter-05-head-in-sand.md  chapter-06-pull-out-rug.md  chapter-07-enemies-and-allies.md  chapter-08-games-and-trials.md  chapter-09-earning-respect.md  chapter-10-forces-of-evil.md  chapter-11-problem-revealed.md  chapter-12-truth-and-ultimatum.md  chapter-13-mirror-stage.md  chapter-14-plan-of-attack.md  chapter-15-crucial-role.md  chapter-16-direct-conflict.md  chapter-17-surprise-failure.md  chapter-18-shocking-revelation.md  chapter-19-giving-up.md  chapter-20-pep-talk.md  chapter-21-seizing-the-sword.md  chapter-22-ultimate-defeat.md  chapter-23-unexpected-victory.md  chapter-24-bittersweet-return.md  chapter-25-death-of-self.md
templates/commands/: develop.md  outline.md  premise.md  review.md  scenes.md  themes.md  write.md
