[project]
name = "writekit-cli"
version = "0.0.17"
description = "WriteKit CLI, part of GitHub Write Kit. A tool to bootstrap your novel writing projects for structured novel development."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
writekit = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]
